--- a/BusinessCardProject/Client/BusinessCardProject.Client/Pages/Policies/UserAgreement.razor
+++ b/BusinessCardProject/Client/BusinessCardProject.Client/Pages/Policies/UserAgreement.razor
@@ -1,6 +1,168 @@
 ﻿@page "/user-agreement"
+@using BusinessCardProject.Client.Services.ProjectInfoService
+@inject ProjectInfoGlobalClass ProjectInfoGlobal
 
 <PageTitle>Пользовательское соглашение</PageTitle>
+
+<MudContainer MaxWidth="MaxWidth.Medium">
+    <MudText Typo="Typo.h4" Align="Align.Justify" GutterBottom="true" Class="mt-4 mb-4">
+        <b>Пользовательское соглашение сайта @ProjectInfoGlobal.ProjectLink</b>
+    </MudText>
+
+    @*1 Пункт*@
+    <MudText Typo="Typo.h5" Align="Align.Justify" GutterBottom="true" Class="mb-2">
+        <b>1. Общие положения</b>
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>1.1.</b> Пользовательское соглашение (далее – «Соглашение») является публичной офертой и определяет условия
+        использования материалов и сервисов, размещенных Администратором на сайте в сети Интернет по адресу:
+        <b>@ProjectInfoGlobal.ProjectLink</b> (далее – «Сайт») пользователями при помощи Сервиса.
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>1.2.</b> Сервис – это программно-аппаратный комплекс, доступный на Сайте, позволяющий Пользователю
+        использовать
+        предусмотренный для него функционал. Сервис включает в себя интерфейс, программное обеспечение и иные элементы
+        (инструменты, алгоритмы, способы), необходимые для надлежащего функционирования Сайта.
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>1.3.</b> Администратором является частное
+        лицо
+        <b>@ProjectInfoGlobal.ProjectOwnerSurname @ProjectInfoGlobal.ProjectOwnerSurname @ProjectInfoGlobal.ProjectOwnerPatronymic</b>,
+        действующий как физическое лицо
+        (далее – "Администратор").
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>1.4.</b> Пользователь – любое физическое лицо и/или юридическое лицо, в том числе посетитель Сайта,
+        принимающий
+        условия Соглашения.
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>1.5.</b> Соглашение является публичной офертой в соответствии со статьей 435 и пунктом 2 статьи 437
+        Гражданского
+        кодекса Российской Федерации.
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>1.6.</b> Соглашение, заключаемое путем акцепта настоящей оферты, не требует двустороннего подписания и
+        действительно
+        в электронном виде.
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>1.7.</b> Для получения доступа к материалам Сайта Пользователю необходимо зарегистрироваться,
+        путем заполнения регистрационной формы, содержащей следующие идентифицирующие Пользователя данные: ФИО, почта,
+        логин и пароль.
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>1.8.</b> Пройдя процедуру регистрации Пользователь считается принявшим условия Соглашения в полном объеме,
+        без
+        каких-либо исключений, оговорок, возражений.
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>1.9.</b> При регистрации на Сайте Пользователь обязан предоставить Администратору необходимую, достоверную и
+        актуальную информацию для формирования профиля, включая уникальные для каждого Пользователя логин (адрес
+        электронной почты) и пароль доступа к Сайту.
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>1.10.</b> Пользователь считается прошедшим регистрацию после предоставления необходимой, достоверной и
+        актуальной
+        информации для формирования профиля.
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>1.11.</b> По завершении процесса регистрации Пользователь становится обладателем учетных данных Пользователя.
+        Пользователь несет ответственность за безопасность учетных данных, а также за все, что будет сделано на Сайте
+        под учетными данными Пользователя. Пользователь обязан немедленно уведомить Администратора о любом случае
+        несанкционированного доступа к Сайту без согласия и ведома Пользователя и/или о любом нарушении безопасности
+        учетной информации Пользователя.
+    </MudText>
+
+    @*2 Пункт*@
+    <MudText Typo="Typo.h5" Align="Align.Justify" GutterBottom="true" Class="mt-4 mb-2">
+        <b>2. Обязательства пользователя</b>
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>2.1.</b> Использование материалов Сайта без согласия правообладателей не допускается.
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>2.2.</b> При цитировании материалов Сайта, включая охраняемые авторские произведения, ссылка на Сайт
+        обязательна.
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>2.3.</b> Использование материалов Сайта без согласия правообладателей не допускается.
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>2.4.</b> При цитировании материалов Сайта, включая охраняемые авторские произведения, ссылка на обязательна.
+    </MudText>
+
+    @*3 Пункт*@
+    <MudText Typo="Typo.h5" Align="Align.Justify" GutterBottom="true" Class="mt-4 mb-2">
+        <b>3. Ответственность администратора</b>
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>3.1.</b> Администратор не несет ответственности за посещение и использование Пользователем внешних ресурсов,
+        ссылки
+        на которые могут содержаться на Сайте.
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>3.2.</b> Администратор не несет ответственности и не имеет прямых или косвенных обязательств перед
+        Пользователем в
+        связи с любыми возможными или возникшими потерями или убытками, связанными с любым содержанием Сайта,
+        регистрацией авторских прав и сведениями о такой регистрации, товарами или услугами, доступными на или
+        полученными через внешние сайты или ресурсы либо иные контакты Пользователя, в которые он вступил, используя
+        размещенную на Сайте информацию или ссылки на внешние ресурсы.
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>3.3.</b> Пользователь согласен с тем, что Администратор не несет какой-либо ответственности и не имеет
+        каких-либо
+        обязательств в связи с рекламой, которая может быть размещена на Сайте Администратором или третьими лицами, в
+        том числе автоматизированными системами показа рекламы (объявлений), установленными на Сайте.
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>3.4.</b> Администратор не несет ответственности за возможную утечку Информации из Базы данных Сайта по любым
+        причинам, в том числе в результате несанкционированных действий третьих лиц.
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>3.5.</b> Администратор не несет ответственности за наличие на Сайте вирусов, а также за возможные
+        последствия заражения компьютера Пользователя вирусами или попадание на компьютер Пользователя иных вредоносных
+        программ.
+    </MudText>
+
+    @*4 Пункт*@
+    <MudText Typo="Typo.h5" Align="Align.Justify" GutterBottom="true" Class="mt-4 mb-2">
+        <b>4. Заключительные положения</b>
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>4.1.</b> Все возможные споры, вытекающие из Соглашения или связанные с ним, подлежат разрешению в
+        соответствии с
+        действующим законодательством Российской Федерации.
+    </MudText>
+    
+    <MudText Align="Align.Right">
+        <MudText Typo="Typo.caption">
+            Опубликовано: 17 октября 2025 г.
+        </MudText>
+    </MudText>
+</MudContainer>
+
 
 @code {
     
