--- a/BusinessCardProject/Client/BusinessCardProject.Client/Pages/Policies/PrivacyPolicy.razor
+++ b/BusinessCardProject/Client/BusinessCardProject.Client/Pages/Policies/PrivacyPolicy.razor
@@ -1,7 +1,183 @@
 ﻿@page "/privacy-policy"
+@using BusinessCardProject.Client.Services.ProjectInfoService
+@inject ProjectInfoGlobalClass ProjectInfoGlobal
 
 <PageTitle>Политика конфиденциальности</PageTitle>
 
-@code {
+<MudContainer MaxWidth="MaxWidth.Medium">
+    <MudText Typo="Typo.h4" Align="Align.Justify" GutterBottom="true" Class="mt-4 mb-4">
+        <b>Политика конфиденциальности</b>
+    </MudText>
+
+    @*1 Пункт*@
+    <MudText Typo="Typo.h5" Align="Align.Justify" GutterBottom="true" Class="mb-2">
+        <b>1. Общие положения</b>
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>1.1.</b> Настоящая Политика конфиденциальности (далее – «Политика») принята Администратором и действует в
+        отношении всей информации, которую Администратор может получить о Пользователе
+        сайта <b>@ProjectInfoGlobal.ProjectLink</b> (далее
+        – «Сайт» или «Сервис») с любого устройства и при коммуникации с Администратором в любой форме.
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>1.2.</b> Используя Cайт (просмотр, чтение текста, отправка или загрузка информации) и предоставляя свои
+        персональные данные, Пользователь Сайта дает согласие на обработку персональных данных в соответствии с данной
+        Политикой, если дополнительные требования к согласию не установлены настоящей Политикой.
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>1.3.</b> Для целей настоящей Политики под «Администратором» понимается физическое лицо –
+        <b>@ProjectInfoGlobal.ProjectOwnerSurname @ProjectInfoGlobal.ProjectOwnerName @ProjectInfoGlobal.ProjectOwnerPatronymic</b>.
+    </MudText>
+
+    @*2 Пункт*@
+    <MudText Typo="Typo.h5" Align="Align.Justify" GutterBottom="true" Class="mt-4 mb-2">
+        <b>2. Персональные данные</b>
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>2.1.</b> Персональные данные – любая информация, относящаяся прямо или косвенно к определенному или
+        определяемому физическому лицу (субъекту персональных данных) - Пользователю.
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>2.2.</b> Обработка персональных данных – любое действие (операция) или совокупность действий (операций) с
+        персональными данными, совершаемое с использованием средств автоматизации или без их использования, в том числе
+        сбор, запись, систематизация, накопление, хранение, уточнение (обновление, изменение), извлечение,
+        использование, передача (предоставление, доступ), обезличивание, блокирование, удаление, уничтожение.
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>2.3.</b> Администратор производит обработку следующих персональных данных: фамилии, имени и отчества (при
+        наличии) пользователя Сервиса, дату место рождения, адрес электронной почты, статистические и иные данные,
+        необходимые для цели пользования Сервисом.
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>2.4.</b> Cookies – небольшие по размеру текстовые файлы, хранящиеся в браузере посетителей Сервиса. На
+        совокупности различных веб-проектов Администратора (при просмотре Сервиса происходит автоматический сбор (из
+        Cookies).
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>2.5.</b> Изменения пользовательских настроек, в результате которых файлы Cookies будут заблокированы или
+        удалены, могут привести к недоступности отдельных компонентов Сервиса.
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>2.6.</b> Для получения доступа к материалам Сайта Пользователю необходимо зарегистрироваться,
+        путем заполнения регистрационной формы, содержащей следующие идентифицирующие Пользователя данные: ФИО, почта,
+        логин и пароль.
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>2.7.</b> Пройдя процедуру регистрации Пользователь считается принявшим условия Политики в полном объеме, без
+        каких-либо исключений, оговорок, возражений.
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>2.8.</b> При регистрации в Сервисе Пользователь обязан предоставить Администратору необходимую, достоверную и
+        актуальную информацию для формирования профиля, включая уникальные для каждого Пользователя логин (адрес
+        электронной почты) и пароль доступа к Сервису.
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>2.9.</b> Пользователь считается прошедшим регистрацию после предоставления необходимой, достоверной и
+        актуальной информацию для формирования профиля.
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>2.10.</b> По завершении процесса регистрации Пользователь становится обладателем учетных данных Пользователя.
+        Пользователь несет ответственность за безопасность учетных данных, а также за все, что будет сделано на Сервисе
+        под учетными данными Пользователя. Пользователь обязан немедленно уведомить Администратора о любом случае
+        несанкционированного доступа к Сервису без согласия и ведома Пользователя и (или) о любом нарушении безопасности
+        учетной информации Пользователя.
+    </MudText>
+
+    @*3 Пункт*@
+    <MudText Typo="Typo.h5" Align="Align.Justify" GutterBottom="true" Class="mt-4 mb-2">
+        <b>3. Цели обработки персональных данных</b>
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>3.1.</b> Администратор обрабатывает персональные данные Пользователя для целей информационно-справочного
+        обслуживания, а также идентификации Пользователя Сервиса.
+    </MudText>
+
+    @*4 Пункт*@
+    <MudText Typo="Typo.h5" Align="Align.Justify" GutterBottom="true" Class="mt-4 mb-2">
+        <b>4. Порядок и условия обработки персональных данных</b>
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>4.1.</b> Обработка персональных данных Пользователя осуществляется без ограничения срока, любым законным
+        способом, в том числе в информационных системах персональных данных с использованием средств автоматизации или
+        без использования таких средств.
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>4.2.</b> Все персональные данные Администратор получает непосредственно от Пользователя или от его
+        представителя, либо от лица, поручившего Администратору обработку персональных данных Пользователя, за
+        исключением случаев, предусмотренных законодательством Российской Федерации.
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>4.3.</b> Администратор вправе передавать персональные данные органам дознания и следствия, иным
+        уполномоченным органам по основаниям, предусмотренным действующим законодательством Российской Федерации.
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>4.4.</b> Правовым основанием обработки персональных данных Администратором являются: Конституция РФ,
+        Гражданский кодекс РФ, согласие Пользователя на обработку его персональных данных.
+    </MudText>
+
+    @*5 Пункт*@
+    <MudText Typo="Typo.h5" Align="Align.Justify" GutterBottom="true" Class="mt-4 mb-2">
+        <b>5. Права пользователя</b>
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>5.1.</b> Пользователь вправе реализовать свои права, предусмотренные законодательством Российской Федерации о
+        персональных данных, в том числе, но не ограничиваясь: уточнять, обновлять свои персональные данные, требовать
+        их блокирования или уничтожения; запрашивать у Администратора перечень обрабатываемых персональных данных,
+        правовых оснований обработки, источники их получения, информацию о сроках обработки и хранения, а также иные
+        сведения, связанные с обработкой своих персональных данных.
+    </MudText>
+
+    @*6 Пункт*@
+    <MudText Typo="Typo.h5" Align="Align.Justify" GutterBottom="true" Class="mt-4 mb-2">
+        <b>6. Права и обязанности администратора</b>
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>6.1.</b> Администратор обязуется использовать полученную персональную информацию Пользователя только в целях,
+        названных в настоящей Политике.
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>6.2.</b> Администратор вправе не удалять данные Пользователя, необходимые для хранения в соответствии с
+        действующим законодательством Российской Федерации.
+    </MudText>
+
+    @*7 Пункт*@
+    <MudText Typo="Typo.h5" Align="Align.Justify" GutterBottom="true" Class="mt-4 mb-2">
+        <b>7. Заключительные положения</b>
+    </MudText>
+
+    <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
+        <b>7.1.</b> Согласие действует в течение неограниченного времени. Пользователь вправе отозвать настоящее
+        согласие на обработку своих персональных данных, письменно уведомив об этом Администратора по электронной почте.
+    </MudText>
     
+    <MudText Align="Align.Right">
+        <MudText Typo="Typo.caption">
+            Опубликовано: 17 октября 2025 г.
+        </MudText>
+    </MudText>
+</MudContainer>
+
+@code {
+
 }
