--- a/BusinessCardProject/Client/BusinessCardProject.Client/Pages/Home.razor
+++ b/BusinessCardProject/Client/BusinessCardProject.Client/Pages/Home.razor
@@ -46,7 +46,7 @@
 
 @code
 {
-    private string _mailLink;
+    private string _mailLink = string.Empty;
 
     protected override async Task OnInitializedAsync()
     {
