--- a/BusinessCardProject/Client/BusinessCardProject.Client/Pages/Policies/PrivacyPolicy.razor
+++ b/BusinessCardProject/Client/BusinessCardProject.Client/Pages/Policies/PrivacyPolicy.razor
@@ -28,8 +28,9 @@
     </MudText>
 
     <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
-        <b>1.3.</b> Для целей настоящей Политики под «Администратором» понимается физическое лицо –
-        <b>@ProjectInfoGlobal.ProjectOwnerSurname @ProjectInfoGlobal.ProjectOwnerName @ProjectInfoGlobal.ProjectOwnerPatronymic</b>.
+        <b>1.3.</b> Для целей настоящей Политики под «Администратором» понимается самозанятый –
+        <b>@ProjectInfoGlobal.ProjectOwnerSurname @ProjectInfoGlobal.ProjectOwnerName @ProjectInfoGlobal.ProjectOwnerPatronymic</b>,
+        почта: <b>@ProjectInfoGlobal.ProjectOwnerEmail</b>, ИНН: <b>@ProjectInfoGlobal.ProjectOwnerINN</b>.
     </MudText>
 
     @*2 Пункт*@
