--- a/BusinessCardProject/Client/BusinessCardProject.Client/Pages/Policies/UserAgreement.razor
+++ b/BusinessCardProject/Client/BusinessCardProject.Client/Pages/Policies/UserAgreement.razor
@@ -30,8 +30,9 @@
     <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
         <b>1.3.</b> Администратором является частное
         лицо
-        <b>@ProjectInfoGlobal.ProjectOwnerSurname @ProjectInfoGlobal.ProjectOwnerSurname @ProjectInfoGlobal.ProjectOwnerPatronymic</b>,
-        действующий как физическое лицо
+        <b>@ProjectInfoGlobal.ProjectOwnerSurname @ProjectInfoGlobal.ProjectOwnerName @ProjectInfoGlobal.ProjectOwnerPatronymic</b>,
+        почта: <b>@ProjectInfoGlobal.ProjectOwnerEmail</b>, ИНН: <b>@ProjectInfoGlobal.ProjectOwnerINN</b>
+        действующий как самозанятый
         (далее – "Администратор").
     </MudText>
 
