--- a/BusinessCardProject/Client/BusinessCardProject.Client/Pages/Settings/Setting.razor
+++ b/BusinessCardProject/Client/BusinessCardProject.Client/Pages/Settings/Setting.razor
@@ -3,13 +3,13 @@
 <PageTitle>Настройки</PageTitle>
 
 <MudContainer MaxWidth="MaxWidth.Medium">
-    <MudText Typo="Typo.h4" Align="Align.Justify" GutterBottom="true" Class="mt-4">
-        <b>Ваши настройки</b>
+    <MudText Typo="Typo.h5" Align="Align.Justify" GutterBottom="true" Class="mt-4">
+        <b>Настройки:</b>
     </MudText>
 
     @*Switch для соц.сетей*@
     <MudPaper Class="d-flex flex-wrap align-center gap-2 pl-4 pr-4 py-2 mb-4">
-        <MudText Typo="Typo.h5" Class="m-0">
+        <MudText Typo="Typo.h6" Class="m-0">
             Платформа для видеоуроков:
         </MudText>
         
@@ -46,10 +46,10 @@
         </div>
     </MudPaper>
     
-    @*Switch для соц.сетей*@
+    @*Switch для ЯП*@
     <MudPaper Class="d-flex flex-wrap align-center gap-2 pl-4 pr-4 py-2">
-        <MudText Typo="Typo.h5" Class="m-0">
-            Что-то еще...
+        <MudText Typo="Typo.h6" Class="m-0">
+            Выберите язык программирования:
         </MudText>
     </MudPaper>
 </MudContainer>
@@ -59,19 +59,19 @@
     #region Инициализация переменных для Switch соц.сетей
 
     /*Switch для социальных сетей */
-    public bool SocialPageSwitch1 { get; private set; } = false;
-    public bool SocialPageSwitch2 { get; private set; } = false;
-    public bool SocialPageSwitch3 { get; private set; } = false;
+    public bool SocialPageSwitch1 { get; private set; }
+    public bool SocialPageSwitch2 { get; private set; }
+    public bool SocialPageSwitch3 { get; private set; }
 
     #endregion
 
     /// <summary>
     /// Положение текста
     /// </summary>
-    public Placement Placement { get; } = Placement.Bottom;
+    private Placement Placement { get; } = Placement.Bottom;
     
     /// <summary>
-    /// Переключение Switch(-ей) для соц.сетей
+    /// Переключение Switch(-ей) для соц. сетей
     /// </summary>
     /// <param name="propertyName">switch name</param>
     /// <param name="value">switch value</param>
