--- a/BusinessCardProject/Client/BusinessCardProject.Client/Pages/Home.razor
+++ b/BusinessCardProject/Client/BusinessCardProject.Client/Pages/Home.razor
@@ -10,7 +10,7 @@
     </MudText>
     
     <MudAlert Severity="Severity.Info" Variant="Variant.Filled"
-              Class="my-2" Align="Align.Justify" Elevation="6">
+              Class="my-2" Elevation="6">
         На данном ресурсе представлены учебные материалы по C#, разработке приложений и WEB-приложений.
         Предлагаемые материалы будут полезны как начинающим, так и тем, кто стремится к расширению своих знаний!
     </MudAlert>
@@ -23,7 +23,7 @@
     </MudText>
     
     <MudAlert Severity="Severity.Error" Variant="Variant.Filled" 
-              Class="my-2" Align="Align.Justify" Elevation="6">
+              Class="my-2" Elevation="6">
         Для полноценного использования функционала сайта потребуется пройти процедуру регистрации и авторизации.
     </MudAlert>
     
